# scUnify

./: .editorconfig  .gitignore  .readthedocs.yaml  CONTRIBUTING_NEW_MODEL.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yaml  release.yaml
docs/: api.md  conf.py  contributing.md  index.md  references.bib
docs/_templates/autosummary/: class.rst
docs/extensions/: typed_returns.py
docs/notebooks/: example.ipynb
src/scunify/: __init__.py
src/scunify/config/: __init__.py  _config.py  _config_creators.py  _download.py  _setup.py  _validators.py
src/scunify/config/architecture/: geneformer.yaml  nicheformer.yaml  scfoundation.yaml  scgpt.yaml  uce.yaml
src/scunify/config/defaults/: system.yaml  training_param.yaml
src/scunify/config/defaults/models/: geneformer.yaml  nicheformer.yaml  scfoundation.yaml  scgpt.yaml  uce.yaml
src/scunify/config/envs/: geneformer_env.yaml  nicheformer_env.yaml  scfoundation_env.yaml  scgpt_env.yaml  uce_env.yaml
src/scunify/core/: __init__.py  data_actor.py  logger.py  runner.py  training_logger.py
src/scunify/core/loops/: inference_loop.py  training_loop.py
src/scunify/eval/: __init__.py  _benchmarker.py  _cka.py  _n2o.py  _plotting.py  _scgraph.py  _scib.py
src/scunify/inferencer/: __init__.py  _geneformer_inferencer.py  _nicheformer_inferencer.py  _scfoundation_inferencer.py  _scgpt_inferencer.py  _uce_inferencer.py
src/scunify/inferencer/base/: _baseinferencer.py
src/scunify/inferencer/models/: __init__.py  _geneformer_wrapper.py  _nicheformer_wrapper.py  _scfoundation_wrapper.py  _scgpt_wrapper.py  _uce_wrapper.py
src/scunify/registry/: README.md  __init__.py
src/scunify/registry/dataset/: __init__.py  _geneformer_dataset.py  _nicheformer_dataset.py  _scfoundation_dataset.py  _scgpt_dataset.py  _uce_dataset.py
src/scunify/registry/dataset/perturbation/: __init__.py  _scfoundation_perturbation_dataset.py  _scgpt_perturbation_dataset.py  pertdata.py
src/scunify/registry/models/: __init__.py  _geneformer_wrapper.py  _nicheformer_wrapper.py  _scfoundation_wrapper.py  _scgpt_wrapper.py  _uce_wrapper.py
src/scunify/registry/models/modules/perturbation/: __init__.py  gears.py  inference.py  model.py  pertdata.py
src/scunify/registry/models/modules/scfoundation/: encoders.py  mae_autobin.py  performer.py  reversible.py  transformer.py
src/scunify/registry/models/modules/scgpt/: dsbn.py  gene_tokenizer.py  generation_model.py  load.py  model.py  utils.py
src/scunify/registry/models/modules/uce/: model.py
src/scunify/trainer/: __init__.py  _geneformer_trainer.py  _nicheformer_trainer.py  _scfoundation_trainer.py  _scgpt_trainer.py  _uce_trainer.py
src/scunify/trainer/base/: __init__.py  _basetrainer.py  _early_stopping.py  _splitter.py
src/scunify/trainer/dataset/: __init__.py  _geneformer_dataset.py  _nicheformer_dataset.py  _samplers.py  _scfoundation_dataset.py  _scgpt_dataset.py  _uce_dataset.py
src/scunify/trainer/lora/: __init__.py  _freeze.py  _injection.py  _targets.py  _unfused_mha.py
src/scunify/trainer/models/: __init__.py  _geneformer_wrapper.py  _nicheformer_wrapper.py  _scfoundation_wrapper.py  _scgpt_wrapper.py  _uce_wrapper.py
src/scunify/trainer/tasks/: __init__.py  _base.py  _classification.py  _integration.py  _integration_scgpt.py  _perturbation.py  _perturbation_scfoundation.py  _perturbation_scgpt.py  _pretraining.py  _regression.py  _utils.py
src/scunify/utils/: __init__.py  utils.py
tests/: test_basic.py
