[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "scunify"
version = "0.0.1"
description = "Unified Zero-shot Inference Framework for scRNA-seq Foundation Models"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "DHKim", email = "dhkim960327@gmail.com" },
]
authors = [
  { name = "DHKim" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

# 기본 dependencies는 비움 (Worker 환경 충돌 방지)
dependencies = []

# scUnify[core]: Master 전용 (경량!)
# numpy/scanpy/scipy는 Worker 환경에서 관리
optional-dependencies.core = [
  "ray[default,train]>=2.48",  # Runner, Task 분산
  "rich>=13.0",                 # ProgressUI
  "pyyaml>=6.0",                # config 파일
  "nvidia-ml-py>=11.450",       # GPU 모니터링 (pynvml)
  "tqdm>=4.60",                 # 진행 표시
]

# scUnify[eval]: 평가 전용 (inference와 독립)
optional-dependencies.eval = [
  "scanpy>=1.9",
  "scib-metrics>=0.5",   # scib 메트릭 (scib 대체)
  "scvi-tools",
  "numpy",               # 범위 제한 없음
  "pandas>=2",
  "scipy>=1.11",
  "plottable>=0.1.5",    # 이쁜 테이블 플로팅
  "matplotlib>=3.5",
  "tqdm>=4.60",
  "scikit-learn>=1.0",   # MinMaxScaler
  "jax[cuda12]>=0.4.20", # JAX CUDA 12 지원 (scib-metrics 의존성)
]

optional-dependencies.dev = [
  "pre-commit",
  "twine>=4.0.2",
]
optional-dependencies.doc = [
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",
  "ipython",
  "ipywidgets",
  "myst-nb>=1.1",
  "pandas",
  # Until pybtex >0.24.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
  "setuptools",
  "sphinx>=8.1",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-tabs",
  "sphinxcontrib-bibtex>=1",
  "sphinxcontrib-katex",
  "sphinxext-opengraph",
]
optional-dependencies.test = [
  "coverage>=7.10",
  "pytest",
  "pytest-cov",     # For VS Code’s coverage functionality
]
urls.Documentation = "https://scUnify.readthedocs.io/"
urls.Homepage = "https://github.com/DHKim327/scUnify"
urls.Source = "https://github.com/DHKim327/scUnify"

[tool.hatch.envs.default]
installer = "uv"
features = [ "dev" ]

[tool.hatch.envs.docs]
features = [ "doc" ]
scripts.build = "sphinx-build -M html docs docs/_build -W {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

# Test the lowest and highest supported Python versions with normal deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "stable" ]
python = [ "3.11", "3.12" ]

# Test the newest supported Python version also with pre-release deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "pre" ]
python = [ "3.14" ]

[tool.hatch.envs.hatch-test]
features = [ "dev", "test" ]

[tool.hatch.envs.hatch-test.overrides]
# If the matrix variable `deps` is set to "pre",
# set the environment variable `UV_PRERELEASE` to "allow".
matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [ "pre" ] },
]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "src/scunify/registry/", # ← 끝에 / 없어도 됨
]

format.docstring-code-format = true

lint.select = [
  #"B",  # 일부 버그 가능성 있는 버그베어
  #"E",  # 진짜 문법/스타일 에러
  #"F",  # 정의 안된 이름 등 진짜 버그 (나중에 다시 켜는 걸 추천)
  #"UP", # Python 업그레이드 관련 (원하면 유지)
]

lint.ignore = [
  "B008",
  # 추가로 아래도 꺼버릴 수 있음
  "B905",   # zip strict
  "BLE001", # broad except
  "C408",   # dict() 스타일
  "C417",   # map() 스타일
  "E501",
  "E731",
  "E741",
  "TID252", # 절대 import 강요
]

lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
addopts = [
  "--import-mode=importlib", # allow using test files with same name
]

[tool.coverage.run]
source = [ "scunify" ]
patch = [ "subprocess" ]
omit = [
  "**/test_*.py",
]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
